--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -230,5 +230,7 @@
 .table {
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
-  border: 1px solid #c1c1c179;
+  border-top: 1px solid #c1c1c15a;
+  border-left: 1px solid #c1c1c15a;
+  border-right: 1px solid #c1c1c15a;
 }
